--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,10 +6,11 @@
 
     <uses-sdk
         android:minSdkVersion="9"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="20" />
 
     <application
         android:icon="@drawable/icon"
+        android:allowBackup="false"
         android:label="@string/app_name" >
         <activity
             android:name=".FileBrowser"
